tests/expectations/compiler/core/algorithms/bhp512_hash_to_group.out
<<<<<<< HEAD
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:24
     |
  28 |         let a: group = BHP512::hash_to_group(addr_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:24
     |
  29 |         let b: group = BHP512::hash_to_group(bool_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:24
     |
  30 |         let c: group = BHP512::hash_to_group(field_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:24
     |
  31 |         let d: group = BHP512::hash_to_group(group_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:24
     |
  32 |         let e: group = BHP512::hash_to_group(i8_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:24
     |
  33 |         let f: group = BHP512::hash_to_group(i16_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:24
     |
  34 |         let g: group = BHP512::hash_to_group(i32_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:24
     |
  35 |         let h: group = BHP512::hash_to_group(i64_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:24
     |
  36 |         let i: group = BHP512::hash_to_group(i128_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:24
     |
  37 |         let j: group = BHP512::hash_to_group(u8_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:24
     |
  38 |         let k: group = BHP512::hash_to_group(u16_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:24
     |
  39 |         let l: group = BHP512::hash_to_group(u32_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:24
     |
  40 |         let m: group = BHP512::hash_to_group(u64_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:24
     |
  41 |         let n: group = BHP512::hash_to_group(u128_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:24
     |
  42 |         let o: group = BHP512::hash_to_group(scalar_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:24
     |
  44 |         let q: group = BHP512::hash_to_group(Foo { a: 1u128, b: 1u128 });
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
=======
program test.aleo;

function main:
    input r0 as i8.private;
    input r1 as i16.private;
    input r2 as i32.private;
    input r3 as i64.private;
    input r4 as u8.private;
    input r5 as u16.private;
    input r6 as u32.private;
    input r7 as u64.private;
    hash.bhp512 aleo10qerras5799u6k7rjtc9y3hcwxuykr45qra7x7dp6jgnc0923czqm0lgta into r8 as group;
    hash.bhp512 true into r9 as group;
    hash.bhp512 1field into r10 as group;
    hash.bhp512 1540945439182663264862696551825005342995406165131907382295858612069623286213group into r11 as group;
    hash.bhp512 r0 into r12 as group;
    hash.bhp512 r1 into r13 as group;
    hash.bhp512 r2 into r14 as group;
    hash.bhp512 r3 into r15 as group;
    hash.bhp512 1i128 into r16 as group;
    hash.bhp512 r4 into r17 as group;
    hash.bhp512 r5 into r18 as group;
    hash.bhp512 r6 into r19 as group;
    hash.bhp512 r7 into r20 as group;
    hash.bhp512 1u128 into r21 as group;
    hash.bhp512 1scalar into r22 as group;
    output r8 as group.private;
    output r9 as group.private;
    output r10 as group.private;
    output r11 as group.private;
    output r12 as group.private;
    output r13 as group.private;
    output r14 as group.private;
    output r15 as group.private;
    output r16 as group.private;
    output r17 as group.private;
    output r18 as group.private;
    output r19 as group.private;
    output r20 as group.private;
    output r21 as group.private;
    output r22 as group.private;
    output 5251361372185314653833587904234451500307325515957079083589672793035415961715group as group.private;
>>>>>>> mainnet
